--- a/plugins/assistants/Assistants/CMakeLists.txt
+++ b/plugins/assistants/Assistants/CMakeLists.txt
@@ -13,6 +13,7 @@ set(kritaassistanttool_SOURCES
     SplineAssistant.cc
     VanishingPointAssistant.cc
     EditAssistantsCommand.cpp
+    ConjugateAssistant.cc
 )
 
 ki18n_wrap_ui(kritaassistanttool_SOURCES AssistantsToolOptions.ui )
