Change the order of tool icons in icon creator
This commit changes the names of the tool icons to include
a category number and a id number for every icon, hence
providing an order in the sorting of icons in brush presets
icon creator.

There is also a few new icons made by Ramon Miranda.

--- a/krita/data/preset_icons/tool_icons/CMakeLists.txt
+++ b/krita/data/preset_icons/tool_icons/CMakeLists.txt
@@ -1,90 +1,102 @@
 ########### install files ###############
 
 install(FILES
-acrylic-angled.png
-acrylic-fan-used.png
-acrylic-flat-old.png
-acrylic-flat.png
-acrylic-mop.png
-acrylic-rounded-used.png
-adjustement-contrast.png
-adjustement-dark.png
-airbrush.png
-blending-stump.png
-blur_soft.png
-chalk-square.png
-charcoal-block.png
-charcoal-pencil-large.png
-charcoal-pencil-medium.png
-charcoal-pencil-thin.png
-clone.png
-colored-pencil.png
-color-effect.png
-deform.png
-eraser-hard.png
-eraser-kneaded.png
-eraser-large.png
-eraser-mechanical.png
-experimental.png
-filter.png
-gel-pen.png
-graphite.png
-grid.png
-ink-brush.png
-ink-G-pen.png
-inking_brush_blurry.png
-inking_brush.png
-inking_dynamic_pen.png
-inking_dynamic_pen_though.png
-inking_fine-line_medium.png
-inking_fine-line_tiny.png
-inking_pen_bumpy.png
-inking_pen_bumpy_though.png
-inking_pen_calligraphic.png
-ink-pen-atom.png
-ink-pen-glass.png
-knife.png
-knife-rake.png
-large-rounded-cut.png
-marker-large.png
-marker-old.png
-marker.png
-mechanical-pencil.png
-oil-filbert.png
-oil-flat-large.png
-oil-round-hard.png
-paint-roller.png
-pastel.png
-pencil-black-stone.png
-pencil-double-ring.png
-rigger-brush.png
-round_marker_detail.png
-screentone-indicator.png
-shape.png
-sketching_wide_47.png
-sketching_wide_bristles.png
-special-effect-used-brush.png
-stamp.png
-stylus-colored.png
-stylus-colored-ring.png
-stylus-experimental.png
-stylus.png
-stylus-white.png
-sumi-e.png
-synthetic-filbert.png
-synthetic-large-bright.png
-synthetic-large-bright-used.png
-synthetic-medium.png
-synthetic-thin.png
-synthetic-very-old.png
-technical-pen.png
-texture-indicator.png
-thin-stylus-tablet.png
-wand.png
-watercolor-brush-medium.png
-watercolor-flat.png
-wide_brush_big.png
-wide_brush_blurry.png
-wide_dull_round.png
+00_01_eraser-mechanical.png
+00_02_eraser-large.png
+00_03_eraser-hard.png
+00_04_eraser-kneaded.png
+01_01_mechanical-pencil.png
+01_01_pencil-black-stone.png
+01_02_pencil-double-ring.png
+01_04_graphite.png
+02_01_charcoal-pencil-thin.png
+02_02_charcoal-pencil-medium.png
+02_03_charcoal-pencil-large.png
+02_04_charcoal-block.png
+03_01colored-pencil.png
+03_02_chalk-square.png
+03_03_pastel.png
+04_01_technical-pen.png
+04_02_gel-pen.png
+04_03_inking_fine-line_tiny.png
+04_04_inking_fine-line_medium.png
+04_05_ink-pen-atom.png
+04_06_ink-G-pen.png
+04_07_inking_dynamic_pen.png
+04_08_inking_dynamic_pen_though.png
+04_09_inking_pen_bumpy.png
+04_10_inking_pen_bumpy_though.png
+04_11_inking_pen_calligraphic.png
+04_12_rigger-brush.png
+04_13_inking_brush.png
+04_14_inking_brush_blurry.png
+04_15_ink-brush.png
+04_16_large-rounded-cut.png
+04_17_ink-pen-glass.png
+05_01_airbrush.png
+05_02_thin-stylus-tablet.png
+05_03_stylus-white.png
+05_04_stylus.png
+05_05_stylus-colored-ring.png
+05_06_stylus-colored.png
+05_07_stylus-experimental.png
+06_01_marker.png
+06_02_marker-old.png
+06_03_marker-large.png
+06_04_round_marker_detail.png
+06_05_sketching_wide_47.png
+06_06_sketching_wide_bristles.png
+07_01_synthetic-thin.png
+07_02_synthetic-medium.png
+07_03_synthetic-filbert.png
+07_04_synthetic-large-bright.png
+07_05_synthetic-large-bright-used.png
+07_06_oil-filbert.png
+07_07_oil-flat-large.png
+07_08_acrylic-rounded-used.png
+07_09_acrylic-angled.png
+07_10_acrylic-flat.png
+07_11_acrylic-mop.png
+07_12_wide_dull_round.png
+07_13_wide_brush_blurry.png
+07_14_watercolor-flat.png
+07_15_acrylic-fan-used.png
+07_16_acrylic-flat-old.png
+07_17_synthetic-very-old.png
+07_18_special-effect-used-brush.png
+08_01_watercolor-brush-medium.png
+08_02_oil-round-hard.png
+08_03_sumi-e.png
+08_04_wide_brush_big.png
+09_01_blending-stump.png
+09_02_blur_soft.png
+09_03_knife.png
+09_04_knife-rake.png
+09_05_paint-roller.png
+10_01_color-effect.png
+10_02_adjustement-contrast.png
+10_03_adjustement-dark.png
+10_04_filter.png
+10_05_deform.png
+10_06_clone.png
+11_01_wand.png
+11_02_shape.png
+11_03_experimental.png
+11_03stamp.png
+11_04_texture-indicator.png
+11_05_screentone-indicator.png
+11_06_grid.png
+12_01_Mechanical_Pencil.png
+12_02_Fineliner.png
+12_03_Marker_Permanent.png
+12_04_PenBrush_01.png
+12_05_Pen_01.png
+12_06_Pen_02.png
+12_07_Pen_03.png
+12_08_Graphite_stick.png
+12_09_Pastel_Bar_01.png
+12_10_Pastel_Bar_04.png
+12_11_Pastel_Bar_02.png
+
     DESTINATION ${DATA_INSTALL_DIR}/krita/preset_icons/tool_icons)
 
