--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -219,8 +219,8 @@ if(MINGW)
     if(ENABLE_PYTHON_2)
         message(FATAL_ERROR "Python 2.7 is not supported on Windows at the moment.")
     else(ENABLE_PYTHON_2)
-        find_package(PythonInterp 3.6 EXACT)
-        find_package(PythonLibs 3.6 EXACT)
+        find_package(PythonInterp 3.6)
+        find_package(PythonLibs 3.6)
     endif(ENABLE_PYTHON_2)
     if (PYTHONLIBS_FOUND AND PYTHONINTERP_FOUND)
         if(ENABLE_PYTHON_2)
