Demand Python 3.8 accept no substitutes

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -154,8 +154,8 @@ if (MINGW)
         if (ENABLE_PYTHON_2)
             message(FATAL_ERROR "Python 2.7 is not supported on Windows at the moment.")
         else(ENABLE_PYTHON_2)
-            find_package(PythonInterp 3.6)
-            find_package(PythonLibs 3.6)
+            find_package(PythonInterp 3.6 EXACT)
+            find_package(PythonLibs 3.6 EXACT)
         endif()
 		if (PYTHONLIBS_FOUND AND PYTHONINTERP_FOUND)
 			message(STATUS "Python requirements met.")
