--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -219,14 +219,14 @@ if(MINGW)
     if(ENABLE_PYTHON_2)
         message(FATAL_ERROR "Python 2.7 is not supported on Windows at the moment.")
     else(ENABLE_PYTHON_2)
-        find_package(PythonInterp 3.6)
-        find_package(PythonLibs 3.6)
+        find_package(PythonInterp 3.8 EXACT)
+        find_package(PythonLibs 3.8 EXACT)
     endif(ENABLE_PYTHON_2)
     if (PYTHONLIBS_FOUND AND PYTHONINTERP_FOUND)
         if(ENABLE_PYTHON_2)
             find_package(PythonLibrary 2.7)
         else(ENABLE_PYTHON_2)
-            find_package(PythonLibrary 3.6)
+            find_package(PythonLibrary 3.8)
         endif(ENABLE_PYTHON_2)
         TestCompileLinkPythonLibs(CAN_USE_PYTHON_LIBS)
         if (NOT CAN_USE_PYTHON_LIBS)
