Fix  the python version downloaded on Windows to 3.8.1

--- a/3rdparty/ext_pyqt/CMakeLists.txt
+++ b/3rdparty/ext_pyqt/CMakeLists.txt
@@ -33,6 +33,7 @@ elseif(MINGW)
         --target-py-version 3.8
         --bindir ${PREFIX_ext_pyqt}/bin
         --qt ${PREFIX_ext_pyqt}
+        --qmake ${PREFIX_ext_pyqt}/bin/qmake.exe
         --sip ${PREFIX_ext_pyqt}/bin/sip.exe
         --sip-incdir ${PREFIX_ext_pyqt}/include
         --spec win32-g++
@@ -42,6 +43,7 @@ elseif(MINGW)
         --stubsdir ${PREFIX_ext_pyqt}/lib/krita-python-libs/PyQt5
         --no-qml-plugin --no-python-dbus --no-qsci-api --no-tools
         --disable QtSql --disable QtTest --disable QtWinExtras --disable QtHelp
+        --qmake ${PREFIX_ext_pyqt}/bin/qmake.exe
     )
     ExternalProject_Add( ext_pyqt
         DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
