--- a/plugins/impex/raw/CMakeLists.txt
+++ b/plugins/impex/raw/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_subdirectory(tests)
 
 if(OPENEXR_FOUND)
-	include_directories(${OPENEXR_INCLUDE_DIR})
+	include_directories(${OPENEXR_INCLUDE_DIRS})
 endif()
 include_directories(${LibRaw_INCLUDE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/libkdcraw/src)
