--- a/3rdparty/ext_jpeg/CMakeLists.txt
+++ b/3rdparty/ext_jpeg/CMakeLists.txt
@@ -2,8 +2,8 @@ SET(PREFIX_ext_jpeg "${EXTPREFIX}" )
 if (MINGW)
 ExternalProject_Add( ext_jpeg
     DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
-    URL https://api.github.com/repos/libjpeg-turbo/libjpeg-turbo/tarball/2.0.3
-    URL_MD5 f927aa8dfbe47c3ba4d9f29d77b6805c
+    URL https://files.kde.org/krita/build/dependencies/libjpeg-turbo-2.0.3.tar.gz
+    URL_MD5 4c93ba3f9a5d9a50dcdc5c8c995060252f8a5b84
         
     INSTALL_DIR ${PREFIX_ext_jpeg}
     CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${PREFIX_ext_jpeg} -DWITH_SIMD=OFF -DCMAKE_BUILD_TYPE=${GLOBAL_BUILD_TYPE} ${GLOBAL_PROFILE}
@@ -13,8 +13,8 @@ ExternalProject_Add( ext_jpeg
 elseif (ANDROID)
 ExternalProject_Add( ext_jpeg
     DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
-    URL https://api.github.com/repos/libjpeg-turbo/libjpeg-turbo/tarball/2.0.3
-    URL_MD5 f927aa8dfbe47c3ba4d9f29d77b6805c
+    URL https://files.kde.org/krita/build/dependencies/libjpeg-turbo-2.0.3.tar.gz
+    URL_MD5 4c93ba3f9a5d9a50dcdc5c8c995060252f8a5b84
 
     CMAKE_ARGS -DANDROID_ARM_MODE=arm -DCMAKE_INSTALL_PREFIX=${PREFIX_ext_jpeg} -DENABLE_SHARED=ON -DWITH_SIMD=OFF -DENABLE_STATIC=OFF _DCMAKE_BUILD_TYPE=${GLOBAL_BUILD_TYPE} ${GLOBAL_PROFILE}
 
@@ -23,8 +23,8 @@ ExternalProject_Add( ext_jpeg
 else()
 ExternalProject_Add( ext_jpeg
     DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
-    URL https://api.github.com/repos/libjpeg-turbo/libjpeg-turbo/tarball/2.0.3
-    URL_MD5 f927aa8dfbe47c3ba4d9f29d77b6805c
+    URL https://files.kde.org/krita/build/dependencies/libjpeg-turbo-2.0.3.tar.gz
+    URL_MD5 4c93ba3f9a5d9a50dcdc5c8c995060252f8a5b84
   
     INSTALL_DIR ${PREFIX_ext_jpeg}
     CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${PREFIX_ext_jpeg} -DWITH_SIMD=OFF _DCMAKE_BUILD_TYPE=${GLOBAL_BUILD_TYPE} ${GLOBAL_PROFILE}
