Get tarballs with release link, not api link from github

--- a/3rdparty/ext_expat/CMakeLists.txt
+++ b/3rdparty/ext_expat/CMakeLists.txt
@@ -3,8 +3,8 @@ SET(PREFIX_ext_expat "${EXTPREFIX}" )
 if (WIN32)
 ExternalProject_Add( ext_expat
 	DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
-	URL https://api.github.com/repos/libexpat/libexpat/tarball/R_2_2_9
-	URL_MD5 045c3b3ea0fc55f3565cb117e1669493
+	URL https://github.com/libexpat/libexpat/releases/download/R_2_2_9/expat-2.2.9.tar.gz
+	URL_MD5 077b953cc38df8fed78e92841cc35443
 
 	PATCH_COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/expat-2.2.9-b9bd355.diff
 	INSTALL_DIR ${PREFIX_ext_expat}
@@ -18,8 +18,8 @@ ExternalProject_Add( ext_expat
 elseif (ANDROID)
 ExternalProject_Add( ext_expat
 	DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
-	URL https://api.github.com/repos/libexpat/libexpat/tarball/R_2_2_9
-	URL_MD5 045c3b3ea0fc55f3565cb117e1669493
+	URL https://github.com/libexpat/libexpat/releases/download/R_2_2_9/expat-2.2.9.tar.gz
+	URL_MD5 077b953cc38df8fed78e92841cc35443
 
 	INSTALL_DIR ${PREFIX_ext_expat}
     CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${PREFIX_ext_expat} -DCMAKE_BUILD_TYPE=${GLOBAL_BUILD_TYPE} ${GLOBAL_PROFILE} <SOURCE_DIR>/expat
@@ -33,8 +33,8 @@ else()
 
 ExternalProject_Add( ext_expat
 	DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
-	URL https://api.github.com/repos/libexpat/libexpat/tarball/R_2_2_9
-	URL_MD5 045c3b3ea0fc55f3565cb117e1669493
+	URL https://github.com/libexpat/libexpat/releases/download/R_2_2_9/expat-2.2.9.tar.gz
+	URL_MD5 077b953cc38df8fed78e92841cc35443
 
 	INSTALL_DIR ${PREFIX_ext_expat}
 	CONFIGURE_COMMAND ${CMAKE_COMMAND} -DCMAKE_INSTALL_PREFIX=${PREFIX_ext_expat} -DCMAKE_BUILD_TYPE=${GLOBAL_BUILD_TYPE} ${GLOBAL_PROFILE} <SOURCE_DIR>/expat
