expat no longer has a subdirectory?
This is driving me crazy...

--- a/3rdparty/ext_expat/CMakeLists.txt
+++ b/3rdparty/ext_expat/CMakeLists.txt
@@ -37,7 +37,7 @@ ExternalProject_Add( ext_expat
 	URL_MD5 077b953cc38df8fed78e92841cc35443
 
 	INSTALL_DIR ${PREFIX_ext_expat}
-	CONFIGURE_COMMAND ${CMAKE_COMMAND} -DCMAKE_INSTALL_PREFIX=${PREFIX_ext_expat} -DCMAKE_BUILD_TYPE=${GLOBAL_BUILD_TYPE} ${GLOBAL_PROFILE} <SOURCE_DIR>/expat
+	CONFIGURE_COMMAND ${CMAKE_COMMAND} -DCMAKE_INSTALL_PREFIX=${PREFIX_ext_expat} -DCMAKE_BUILD_TYPE=${GLOBAL_BUILD_TYPE} ${GLOBAL_PROFILE} <SOURCE_DIR>
 	BUILD_COMMAND make
 	INSTALL_COMMAND make install
 
