Address Lab/CMYK space subtleties within KoColorSpaceMaths
Summary:
In T4488, two problems were identified with regards to Lab and CMYK when using KoColorSpaceMaths:
 - Palette loading was broken
 - Calculations themselves were broken: KoColorSpaceMaths assumes [0..1] in floating point whereas Lab has [0.100, -128..+127, -128..+127] and CMYK [0..100].

This patch closes T4488 by making LittleCMS-based profiles (CMYKF32ColorSpace, LabF32ColorSpace) request the profile's bounds prior to initializing the channel defaults, and adjusting the same in the Qt controls. I've also changed KoColorSpaceMaths to account for these bounds.

Maniphest Tasks: T4488

Differential Revision: https://phabricator.kde.org/D6589

Closes T4488

(cherry picked from commit 874243cb1a5b3d9820969f0c2869d6458ab4e806)

--- a/libs/pigment/CMakeLists.txt
+++ b/libs/pigment/CMakeLists.txt
@@ -52,6 +52,8 @@ set(kritapigment_SRCS
     KoColorSpaceEngine.cpp
     KoColorSpaceFactory.cpp
     KoColorSpaceMaths.cpp
+    KoCmykColorSpaceMaths.cpp
+    KoLabColorSpaceMaths.cpp
     KoColorSpaceRegistry.cpp
     KoColorProfileStorage.cpp
     KoColorTransformation.cpp
