--- a/3rdparty/ext_iconv/CMakeLists.txt
+++ b/3rdparty/ext_iconv/CMakeLists.txt
@@ -3,7 +3,7 @@ if (MINGW)
 ExternalProject_Add( ext_iconv
 	DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
 	URL https://github.com/win-iconv/win-iconv/archive/v0.0.8.tar.gz
-	URL_MD5 https://github.com/win-iconv/win-iconv/archive/v0.0.8.tar.gz
+	URL_MD5 e4574721c2d9667af32283175c828833
 	
     INSTALL_DIR ${PREFIX_ext_iconv}
 	CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${PREFIX_ext_iconv} -DCMAKE_BUILD_TYPE=${GLOBAL_BUILD_TYPE} ${GLOBAL_PROFILE}
