Revert "Last stage of trying to fix pyqt"
This reverts commit 88b6b6f2c47ea98c89fde572f9c692ef7f96a199.

--- a/3rdparty/ext_pyqt/CMakeLists.txt
+++ b/3rdparty/ext_pyqt/CMakeLists.txt
@@ -32,6 +32,7 @@ elseif(MINGW)
         --confirm-license
         --target-py-version 3.8
         --bindir ${PREFIX_ext_pyqt}/bin
+        --qt ${PREFIX_ext_pyqt}
         --qmake ${PREFIX_ext_pyqt}/bin/qmake.exe
         --sip ${PREFIX_ext_pyqt}/bin/sip.exe
         --sip-incdir ${PREFIX_ext_pyqt}/include
@@ -48,8 +49,8 @@ elseif(MINGW)
         DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
         #URL https://files.kde.org/krita/build/dependencies/PyQt5_gpl-5.12.1.zip
         #URL_MD5 0b2912828a4d59e13d86decdce1687e6
-        URL https://www.riverbankcomputing.com/static/Downloads/PyQt5/5.13.1/PyQt5_gpl-5.13.1.tar.gz
-        URL_MD5 c77af2f4e230b0053fd22bc2ece2e6c0
+        URL https://www.riverbankcomputing.com/static/Downloads/PyQt5/5.12.1/PyQt5_gpl-5.12.1.tar.gz
+        URL_MD5 67508b652098d2e05c4c2b5baeb170cc
 
         PATCH_COMMAND  ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/pyqt-configure-fix.patch
 
