Installation step of PyQt must run in single thread
(otherwise the files are not installed properly)

--- a/3rdparty/ext_pyqt/CMakeLists.txt
+++ b/3rdparty/ext_pyqt/CMakeLists.txt
@@ -56,7 +56,7 @@ elseif(MINGW)
 
         CONFIGURE_COMMAND ${PYTHON_EXECUTABLE} <SOURCE_DIR>/configure.py ${_PYQT_conf}
         BUILD_COMMAND mingw32-make -j${SUBMAKE_JOBS} CXXFLAGS=-D_hypot=hypot LDFLAGS=${SECURITY_SHARED_LINKER_FLAGS}
-        INSTALL_COMMAND mingw32-make install
+        INSTALL_COMMAND mingw32-make -j1 install
         
         BUILD_IN_SOURCE 1
 
