Disable liblzma (.xz) support for KArchive
KArchive links to LZMA incorrectly on Windows. It links to liblzma-5.dll,
even though we have only liblzma.dll. Since we don't use .xz functionality
of KArchive, we can just disable it on Windows.

The only place where we use LZMA is NSIS installer, we don't use
it in KArchive actually.

--- a/3rdparty/ext_frameworks/CMakeLists.txt
+++ b/3rdparty/ext_frameworks/CMakeLists.txt
@@ -37,7 +37,14 @@ ExternalProject_Add(
     DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
     URL https://download.kde.org/stable/frameworks/5.64/karchive-5.64.0.zip
     URL_MD5 26c7f89bfde97bc85f887f81a2d0f648
-    PATCH_COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/karchive.diff
+
+    if (WIN32)
+        PATCH_COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/karchive.diff
+              COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/0001-Disable-LZMA-support.patch
+    else()
+        PATCH_COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/karchive.diff
+    endif()
+
     INSTALL_DIR ${EXTPREFIX_frameworks}
     CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${EXTPREFIX_frameworks}
                -DCMAKE_BUILD_TYPE=${GLOBAL_BUILD_TYPE} 
