Add a debug definition for the resources library

--- a/libs/resources/CMakeLists.txt
+++ b/libs/resources/CMakeLists.txt
@@ -33,6 +33,8 @@ set(kritaresources_LIB_SRCS
     KoMD5Generator.cpp
     KoResourcePaths.cpp
 
+    ResourceDebug.cpp
+
     kconfigini.cpp
     kconfigdata.cpp
     kconfigbackend.cpp
