Integrate Samsung's Air Actions
This commit adds support for the stylus gestures supported by Samsung
S-Pen-compatible devices - the Air Actions. Air Actions is a middleware
supported in Galaxy Tab S6, Note 9 (partially) and Note 10, that
translates S-Pen gestures into keyboard events. (More information from
the developer documentation:
https://developer.samsung.com/codelab/air-actions/overview)

There are two parts:
1, an extensions for assigning the actions, configured from the Settings -> Configure Krita
dialog
2, Android packaging changes to enable interfacing with the Air Actions
middleware

--- a/packaging/android/apk/AndroidManifest.xml
+++ b/packaging/android/apk/AndroidManifest.xml
@@ -12,7 +12,14 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
+			</intent-filter>
+            <intent-filter>
+                <action android:name="com.samsung.android.support.REMOTE_ACTION" />
             </intent-filter>
+            <meta-data
+                android:name="com.samsung.android.support.REMOTE_ACTION"
+                android:resource="@xml/remote_action"/>
+
 
             <!-- Application arguments -->
             <!-- meta-data android:name="android.app.arguments" android:value="arg1 arg2 arg3"/ -->
