Fix code duplication in KisFilterConfiguration and KisPaintOpPreset
Mothods, related to local resources snapshots should be shared between
the classes. We cannot do it via class inheritance properly, because
they have different bases: KisPropertiesConfiguration and KoResource
correspondingly. They even use different kinds of shared pointers!

Anyway, now the mothods use the same codebase and the same API.

--- a/libs/resources/CMakeLists.txt
+++ b/libs/resources/CMakeLists.txt
@@ -39,6 +39,7 @@ set(kritaresources_LIB_SRCS
     kconfigdata.cpp
     kconfigbackend.cpp
 
+    KisLinkedResourcesOperators.cpp
     KisResourcesInterface.cpp
     KisLocalStrokeResources.cpp
     KisGlobalResourcesInterface.cpp
