Implement a class to set numeric HS<X> values for KisVisualColorSelector
Once attached to a selector, it will sync the values and switch
its labels according to the color model in use.
Note that for non-HSX models, it will be inactive and should be
disabled or hidden by the UI embedding it.

(cherry picked from commit fc92fa45aac3d841d9f4d5490a25d8809fad1066)

--- a/libs/widgets/CMakeLists.txt
+++ b/libs/widgets/CMakeLists.txt
@@ -77,6 +77,7 @@ set(kritawidgets_LIB_SRCS
 
     # classes used by internal color selector
     kis_spinbox_color_selector.cpp
+    KisSpinboxHSXSelector.cpp
     KisVisualColorSelector.cpp
     KisVisualColorSelectorShape.cpp
     KisVisualEllipticalSelectorShape.cpp
