--- a/packaging/linux/snap/snapcraft.yaml
+++ b/packaging/linux/snap/snapcraft.yaml
@@ -20,6 +20,7 @@ parts:
     - "-DCMAKE_BUILD_TYPE=Release"
     - "-DENABLE_TESTING=OFF"
     - "-DBUILD_TESTING=OFF"
+    - "-DHIDE_SAFE_ASSERTS=ON"
     - "-DKDE_SKIP_TEST_SETTINGS=ON"
         source: https://download.kde.org/unstable/krita/4.2.9-beta1/krita-4.2.9-beta1.tar.xz
 # Use these instead to build from the git source
