--- a/3rdparty/ext_openjpeg/CMakeLists.txt
+++ b/3rdparty/ext_openjpeg/CMakeLists.txt
@@ -1,11 +1,11 @@
 SET(PREFIX_ext_openjpeg "${EXTPREFIX}" )
 ExternalProject_Add( ext_openjpeg
 	DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
-	URL http://files.kde.org/krita/build/dependencies/openjpeg-version.2.1.tar.gz
-	URL_MD5 3e1c451c087f8462955426da38aa3b3d
+	URL https://files.kde.org/krita/build/dependencies/openjpeg-version.2.3.1.tar.gz
+	URL_MD5 3b9941dc7a52f0376694adb15a72903f
 	
     INSTALL_DIR ${PREFIX_ext_openjpeg}
-	CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${PREFIX_ext_openjpeg} -DCMAKE_BUILD_TYPE=${GLOBAL_BUILD_TYPE} ${GLOBAL_PROFILE}
+	CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${PREFIX_ext_openjpeg} -DOPENJPEG_INSTALL_INCLUDE_DIR=include/ -DCMAKE_BUILD_TYPE=${GLOBAL_BUILD_TYPE} ${GLOBAL_PROFILE}
 	
     UPDATE_COMMAND ""
 	ALWAYS 0
