Opacity Keyframes Cache Correction -- Data-Race Correction
Fixed Data-Race issue where DefaultBounds were incorrectly cloned when
cloning an image. This datarace caused undefined behavior that is now
corrected and helps with rendering Opacity Keyframes.

Added a new KisDefaultBoundsNodeWrapper class to handle bounds accessing
and checking inside of keyframe channels. This allows for easier copy
constructors for KisKeyframeChannels and helps keep data pointer logic
more consistent.

Now, when images are cloned, they are always pointing to the correct
time index.

--- a/libs/image/CMakeLists.txt
+++ b/libs/image/CMakeLists.txt
@@ -160,6 +160,7 @@ set(kritaimage_LIB_SRCS
    kis_edge_detection_kernel.cpp
    kis_cubic_curve.cpp
    kis_default_bounds.cpp
+   kis_default_bounds_node_wrapper.cpp
    kis_default_bounds_base.cpp
    kis_effect_mask.cc
    kis_fast_math.cpp
