Update libheif fix to disable SSSE / SSE4.1 on x86
I've included an alternative to properly compile libheif on x86, but
I'm not sure what extensions Krita actually supports.
libheif *requires* that if SSE is enabled then it must support SSSE.

--- a/3rdparty/ext_heif/CMakeLists.txt
+++ b/3rdparty/ext_heif/CMakeLists.txt
@@ -1,4 +1,5 @@
 SET(EXTPREFIX_heif "${EXTPREFIX}" )
+if ("${CMAKE_SIZEOF_VOID_P}" EQUAL "8")
 ExternalProject_Add(
     ext_libde265
     DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
@@ -11,6 +12,20 @@ ExternalProject_Add(
 
     UPDATE_COMMAND ""
 )
+else ("${CMAKE_SIZEOF_VOID_P}" EQUAL "8")
+ExternalProject_Add(
+    ext_libde265
+    DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
+    URL https://github.com/strukturag/libde265/releases/download/v1.0.5/libde265-1.0.5.tar.gz
+    URL_MD5 385c88166cb255a068a8c936d0ab23ef
+
+    PATCH_COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/01-fix-sse41.diff
+
+    CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${EXTPREFIX_heif} -DCMAKE_BUILD_TYPE=${GLOBAL_BUILD_TYPE} ${GLOBAL_PROFILE} -DDISABLE_SSE=TRUE
+
+    UPDATE_COMMAND ""
+)
+endif ("${CMAKE_SIZEOF_VOID_P}" EQUAL "8")
 
 if (WIN32)
     if ("${CMAKE_SIZEOF_VOID_P}" EQUAL "8")
