Add support for jfif files
The jpeg filter can open them, but the extension wasn't included
yet.

(cherry picked from commit e1735d0654a0fbd761658172dc2d79758d01c2a3)

--- a/plugins/impex/jpeg/krita_jpeg.desktop
+++ b/plugins/impex/jpeg/krita_jpeg.desktop
@@ -2,7 +2,7 @@
 Categories=Qt;KDE;Office;Graphics;
 Exec=krita %F
 Icon=krita
-MimeType=image/jpeg;
+MimeType=image/jpeg;jpeg/jfif
 Name=Krita
 Name[af]=Krita
 Name[ar]=كريتا
