pkging: macOS add missing entitlement

--- a/packaging/macos/entitlements.plist
+++ b/packaging/macos/entitlements.plist
@@ -12,5 +12,7 @@
 	<true/>
 	<key>com.apple.security.files.user-selected.read-write</key>
 	<true/>
+	<key>com.apple.security.automation.apple-events</key>
+	<true/>
 </dict>
 </plist>
