pkg macOS: dont build cli app for x265

--- a/3rdparty/ext_heif/CMakeLists.txt
+++ b/3rdparty/ext_heif/CMakeLists.txt
@@ -125,7 +125,7 @@ else ("${CMAKE_SIZEOF_VOID_P}" EQUAL "8")
 
         PATCH_COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/02-skip-pdb-in-mingw.diff
 
-        CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${EXTPREFIX_heif} -DCMAKE_BUILD_TYPE=${GLOBAL_BUILD_TYPE} ${GLOBAL_PROFILE} -DENABLE_SHARED=TRUE
+        CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${EXTPREFIX_heif} -DCMAKE_BUILD_TYPE=${GLOBAL_BUILD_TYPE} ${GLOBAL_PROFILE} -DENABLE_SHARED=TRUE -DENABLE_CLI=FALSE
 
         UPDATE_COMMAND ""
 
