--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -9,4 +9,4 @@
 liberapay: foundation@krita.org # Replace with a single Liberapay username
 #issuehunt: # Replace with a single IssueHunt username
 #otechie: # Replace with a single Otechie username
-custom: https://krita.org/en/support-us/donations/ # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
+custom: ['https://krita.org/en/support-us/donations/', 'https://kde.org/donations'] # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
